--- a/styles/index.css
+++ b/styles/index.css
@@ -20,18 +20,20 @@ header{
     justify-content: space-between;
     align-items: center;
     background: #168aad2b;
+    box-shadow: 0px 9px 18px -7px rgba(0,0,0,0.1);
 }
 
 header nav .search-bar{
-    width: 294px;
+   
     height: 48px;
-    background: #EEEEEE;
+    background: #778DA9;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 16px;
     position: relative;
-    box-shadow: 0px 9px 18px -7px rgba(0,0,0,0.1);
+
+
 
 }
 
@@ -41,20 +43,22 @@ header nav .search-bar input{
     outline: none;
     border: none;
     height: 100%;
-    font-size: 1em;
+    font-size: 22px;
     padding: 10px;
+    color: #E0E1DD;
+    font-weight: 400;
 }
 
 header nav .search-bar input::placeholder{
-    color: #000;
+    color: #E0E1DD;
 }
 
 
 header nav .search-bar i{
-    color: #000;
+    color: #E0E1DD;
     cursor: pointer;
     padding: 8px;
-    background-color: #99D98C;
+    background-color: #1A759F;
     border-radius: 0 16px 16px 0;
     height: 100%;
     display: flex;
@@ -63,6 +67,6 @@ header nav .search-bar i{
 }
 
 header nav .search-bar i:hover{
-    background-color: #B5E48C;
+    background-color: #184E77;
 }
 
