--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,13 @@
+:root{
+    --zinc-800: #27272a;
+    --zinc-700: #3f3f46;
+    --zinc-600: #52525b;
+    --zinc-500: #71717a;
+    --zinc-400: #a1a1aa;
+    --zinc-300: #d4d4d8;
+    --zinc-200: #e4e4e7;
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -7,66 +17,55 @@
 
 html, body{
     font-family: 'Inter', sans-serif;
-    background: #184e77;
+    background: var(--zinc-800);
     height: 100vh;
-    color: #ffff;
+    color: var(--zinc-200);
 }
 
 header{
     width: 100%;
     height: 10%;
-    padding: 16px 144px;
+    padding: 24px 144px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #168aad2b;
-    box-shadow: 0px 9px 18px -7px rgba(0,0,0,0.1);
+    flex-direction: column;
+    gap: 16px;
 }
 
-header nav .search-bar{
-   
-    height: 48px;
-    background: #778DA9;
+header nav{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    border-radius: 16px;
-    position: relative;
-
-
-
+    gap: 12px;
 }
 
-header nav .search-bar input{
+header nav h1{
+    font-size: 24px;
+}
+
+.search-bar{
+    border: 2px solid var(--zinc-600);
+    width: fit-content;
+    border-radius: 8px;
+    padding: 6px 12px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    height: 34px;
+}
+
+.search-bar input{
     flex: 1;
-    background: none;
-    outline: none;
+    background: transparent;
+    padding: 8px 16px;
     border: none;
-    height: 100%;
-    font-size: 22px;
-    padding: 10px;
-    color: #E0E1DD;
-    font-weight: 400;
+    outline: none;
+    color: var(--zinc-300);
 }
 
-header nav .search-bar input::placeholder{
-    color: #E0E1DD;
+.search-bar input::placeholder{
+    color: var(--zinc-300);
+    font-size: 14px;
 }
 
-
-header nav .search-bar i{
-    color: #E0E1DD;
-    cursor: pointer;
-    padding: 8px;
-    background-color: #1A759F;
-    border-radius: 0 16px 16px 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    transition: all .2s;
+.search-bar i{
+    color: #6ee7b7;
 }
-
-header nav .search-bar i:hover{
-    background-color: #184E77;
-}
-
